--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,72 +1,85 @@
-.calendar{
-	margin:.40em 20px 20px 0;
-	padding-top:5px;
-	float:left;
-	width:80px;
-	background:#ededef;
-	font:bold 36px/60px 'PT Sans', sans-serif;
-	text-align:center;
-	color:#000;
-	text-shadow:#fff 0 1px 0;	
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	border-radius:3px;	
-	position:relative;
-	-moz-box-shadow:0 2px 2px #888;
-	-webkit-box-shadow:0 2px 2px #888;
-	box-shadow:0 2px 2px #888;
-	}
-	
-	.calendar em{
-	display:block;
-	font:normal bold 15px/30px 'PT Sans', sans-serif;
-	color:white;
-	text-shadow:#00365a 0 -1px 0;	
-	background: white;
-	background:-webkit-gradient(linear, left top, left bottom, from(green), to(darkgreen)); 
-	background:-moz-linear-gradient(top,  #04599a,  #00365a); 
-	-moz-border-radius-bottomright:3px;
-	-webkit-border-bottom-right-radius:3px;	
-	border-bottom-right-radius:3px;
-	-moz-border-radius-bottomleft:3px;
-	-webkit-border-bottom-left-radius:3px;	
-	border-bottom-left-radius:3px;	
-	border-top:1px solid #00365a;
-	}
-	
-	.calendar:before, .calendar:after{
-	content:'';
-	float:left;
-	position:absolute;
-	top:5px;	
-	width:8px;
-	height:8px;
-	background:#111;
-	z-index:1;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
-	border-radius:10px;
-	-moz-box-shadow:0 1px 1px #fff;
-	-webkit-box-shadow:0 1px 1px #fff;
-	box-shadow:0 1px 1px #fff;
-	}
-.calendar:before{left:11px;}	
-.calendar:after{right:11px;}
+.calendar {
+	position: relative;
+	float: left;
+	width: 80px;
+	padding-top: 5px;
+	margin: .40em 20px 20px 0;
+	font: bold 36px/60px 'Futura', sans-serif;
+	text-align: center;
+	text-shadow: #fff 0 1px 0;
+	background: #ededef;
+	color: #000;
+	-moz-box-shadow: 0 2px 2px #888;
+	-webkit-box-shadow: 0 2px 2px #888;
+	box-shadow: 0 2px 2px #888;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+}
 
-.calendar em:before, .calendar em:after{
-	content:'';
-	float:left;
-	position:absolute;
-	top:-5px;	
-	width:4px;
-	height:14px;
-	background:#dadada;
-	background:-webkit-gradient(linear, left top, left bottom, from(#f1f1f1), to(#aaa)); 
-	background:-moz-linear-gradient(top,  #f1f1f1,  #aaa); 
-	z-index:2;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	border-radius:2px;
-	}
-.calendar em:before{left:13px;}	
-.calendar em:after{right:13px;}	
+.calendar em {
+	display: block;
+	font: bold 15px/30px 'Futura', sans-serif;
+	text-shadow: #2b2b2b 0 -1px 0;
+	background: white;
+	background: #cd2027;
+	color: white;
+	-moz-border-radius-bottomright: 3px;
+	-webkit-border-bottom-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+	-moz-border-radius-bottomleft: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+	border-top: 1px solid #5f0e11;
+}
+
+.calendar:before,
+.calendar:after {
+	position: absolute;
+	top: 5px;
+	z-index: 1;
+	float: left;
+	width: 8px;
+	height: 8px;
+	background: #111;
+	content: '';
+	-moz-box-shadow: 0 1px 1px #fff;
+	-webkit-box-shadow: 0 1px 1px #fff;
+	box-shadow: 0 1px 1px #fff;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+}
+
+.calendar:before {
+	left: 11px;
+}
+
+.calendar:after {
+	right: 11px;
+}
+
+.calendar em:before,
+.calendar em:after {
+	position: absolute;
+	top: -5px;
+	z-index: 2;
+	float: left;
+	width: 4px;
+	height: 14px;
+	background: #dadada;
+	background: -webkit-gradient(linear, left top, left bottom, from(#f1f1f1), to(#aaa));
+	background: -moz-linear-gradient(top, #f1f1f1, #aaa);
+	content: '';	
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+}
+
+.calendar em:before {
+	left: 13px;
+}
+
+.calendar em:after {
+	right: 13px;
+}
